--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -32,6 +32,9 @@
         <action
             android:id="@+id/action_homeFragment_to_chooseActionFragment"
             app:destination="@id/chooseActionFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_userFragment"
+            app:destination="@id/userFragment" />
     </fragment>
     <fragment
         android:id="@+id/flightFragment"
@@ -85,4 +88,9 @@
         android:name="com.ctwofinalproject.ticketing.admin.view.ui.flight.DetailFlightFragment"
         android:label="fragment_detail_flight"
         tools:layout="@layout/fragment_detail_flight" />
+    <fragment
+        android:id="@+id/userFragment"
+        android:name="com.ctwofinalproject.ticketing.admin.view.ui.user.UserFragment"
+        android:label="fragment_user"
+        tools:layout="@layout/fragment_user" />
 </navigation>
