--- a/app/src/main/res/layout/item_show_user.xml
+++ b/app/src/main/res/layout/item_show_user.xml
@@ -7,7 +7,7 @@
     android:layout_marginEnd="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="300dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -68,6 +68,25 @@
             android:layout_marginStart="10dp"
             android:paddingBottom="5dp"
             android:layout_toEndOf="@+id/userIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/btnUpdateUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtAddressUser"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="90dp"
+            android:text="@string/update" />
+        <Button
+            android:layout_marginStart="10dp"
+            android:id="@+id/btnDeleteUser"
+            android:text="@string/delete"
+            android:backgroundTint="#910000"
+            android:layout_marginTop="90dp"
+            android:layout_below="@id/txtAddressUser"
+            android:layout_toEndOf="@+id/btnUpdateUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
