--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -35,6 +35,9 @@
         <action
             android:id="@+id/action_homeFragment_to_userFragment"
             app:destination="@id/userFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_airportDataFragment"
+            app:destination="@id/airportDataFragment" />
     </fragment>
     <fragment
         android:id="@+id/flightFragment"
@@ -102,4 +105,9 @@
         android:name="com.ctwofinalproject.ticketing.admin.view.ui.user.DetailUserFragment"
         android:label="fragment_detail_user"
         tools:layout="@layout/fragment_detail_user" />
+    <fragment
+        android:id="@+id/airportDataFragment"
+        android:name="com.ctwofinalproject.ticketing.admin.view.ui.airportdata.AirportDataFragment"
+        android:label="fragment_airport_data"
+        tools:layout="@layout/fragment_airport_data" />
 </navigation>
