--- a/app/src/main/res/layout/item_show_user.xml
+++ b/app/src/main/res/layout/item_show_user.xml
@@ -3,94 +3,108 @@
     android:elevation="10dp"
     app:cardCornerRadius="10dp"
     android:layout_marginTop="10dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/userIcon"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/user"
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
-        <TextView
-            android:id="@+id/txtNameUser"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Name: "
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="10dp"
-            android:paddingBottom="5dp"
-            android:layout_toEndOf="@+id/userIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/txtEmailUser"
-            android:layout_below="@+id/txtNameUser"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Email: "
-            android:layout_marginStart="10dp"
-            android:paddingBottom="5dp"
-            android:layout_toEndOf="@+id/userIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/txtGenderUser"
-            android:layout_below="@+id/txtEmailUser"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Gender: "
-            android:layout_marginStart="10dp"
-            android:paddingBottom="5dp"
-            android:layout_toEndOf="@+id/userIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/txtPassUser"
-            android:layout_below="@+id/txtGenderUser"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Password: "
-            android:layout_marginStart="10dp"
-            android:paddingBottom="5dp"
-            android:layout_toEndOf="@+id/userIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/txtAddressUser"
-            android:layout_below="@+id/txtPassUser"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Address: "
-            android:layout_marginStart="10dp"
-            android:paddingBottom="5dp"
-            android:layout_toEndOf="@+id/userIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:background="@color/secondary_font_color">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnUpdateUser"
+            app:layout_constraintVertical_bias="0"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                >
+                <TextView
+                    android:id="@+id/txtNameUser"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Name: "
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/txtEmailUser"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Email: "
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/txtGenderUser"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Gender: "
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/txtPassUser"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Password: "
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/txtAddressUser"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="Address: "
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <ImageView
+                android:id="@+id/userIcon"
+                android:src="@drawable/user"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                />
+        </LinearLayout>
 
         <Button
             android:id="@+id/btnUpdateUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txtAddressUser"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="90dp"
-            android:text="@string/update" />
+            android:text="@string/update"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1"
+            app:layout_constraintRight_toLeftOf="@+id/btnDeleteUser"
+            app:layout_constraintHorizontal_bias="1"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            />
         <Button
-            android:layout_marginStart="10dp"
             android:id="@+id/btnDeleteUser"
             android:text="@string/delete"
-            android:backgroundTint="#910000"
-            android:layout_marginTop="90dp"
-            android:layout_below="@id/txtAddressUser"
-            android:layout_toEndOf="@+id/btnUpdateUser"
+            android:backgroundTint="#FF0C0C"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1"
+            app:layout_constraintHorizontal_bias="1"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
