--- a/app/src/main/res/layout/fragment_airport_data.xml
+++ b/app/src/main/res/layout/fragment_airport_data.xml
@@ -108,7 +108,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvAllFragmentAirport"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="match_parent"
                 app:layout_constraintTop_toBottomOf="@+id/llTvAllAirportFragmentAirport"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
