--- a/app/src/main/res/layout/fragment_list_user_booking.xml
+++ b/app/src/main/res/layout/fragment_list_user_booking.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.listuserbooking.ListUserBookingFragment">
+    tools:context=".view.ui.listuserbooking.ListUserBookingFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/llHeaderFragmentShowTicket"
@@ -45,12 +45,17 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/rvListUserBooking"
+        android:layout_width="match_parent"
+        android:layout_height="750dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llHeaderFragmentShowTicket" />
+        app:layout_constraintTop_toBottomOf="@+id/llHeaderFragmentShowTicket"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/item_list_user_booking"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
