--- a/app/src/main/res/layout/item_list_user_booking.xml
+++ b/app/src/main/res/layout/item_list_user_booking.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+    android:layout_margin="10dp"
     android:id="@+id/cvItemListUserBooking"
-    android:elevation="10dp"
+    android:elevation="20dp"
     app:cardCornerRadius="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
+    android:layout_width="match_parent"
     android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="25dp"
+        android:id="@+id/tvBookingIdItemListBook"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:textSize="20sp"
         android:fontFamily="@font/poppins_semibold"
         android:layout_width="wrap_content"
@@ -18,13 +20,5 @@
         android:text="Booking ID: "
         />
 
-    <TextView
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="25dp"
-        android:textSize="20sp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
 </androidx.cardview.widget.CardView>
