--- a/app/src/main/res/layout/fragment_flight.xml
+++ b/app/src/main/res/layout/fragment_flight.xml
@@ -375,12 +375,13 @@
                         android:textColor="@color/primary_font_color" />
 
                     <EditText
+                        android:id="@+id/etHarga"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/txt_selectClass"
-                        android:layout_toEndOf="@+id/txtPrice"
                         android:layout_centerInParent="true"
-                        android:inputType="number" />
+                        android:layout_toEndOf="@+id/txtPrice"
+                        android:inputType="text" />
 
 
                 </RelativeLayout>
