--- a/app/src/main/res/layout/fragment_airport_data_details.xml
+++ b/app/src/main/res/layout/fragment_airport_data_details.xml
@@ -196,6 +196,7 @@
                 android:text="@string/update"
                 android:textAllCaps="false"
                 android:elevation="@dimen/cardview_default_elevation"
+                android:layout_marginBottom="30dp"
                 android:background="@drawable/custom_button"
                 />
         </LinearLayout>
